--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -160,7 +160,7 @@ Most DGCMs represent a vertical variability in the main physiological parameters
 
 **In addition, we also added a paragraph that more clearly describes the methods used for light competition that enables the type of variation in physiological traits that you described (e.g., Vcmax):**
 
-- **Owing to differences in the representation of forest vertical strata, DVGMs vary in their capacity to incorporate vertical variation in leaf traits and physiological processes. In general, however, this variation is accounted for via light competition. Models partition radiation above and within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018]. Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., in the Community Land Model), while models with multiple vegetative layers can analytically solve the two-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing cumulative LAI or lower light conditions [Table `r table_leaf_metabolism`, e.g., @krinnerDynamicGlobalVegetation2005].** 
+- **Owing to differences in the representation of forest vertical strata, DVGMs vary in their capacity to incorporate vertical variation in leaf traits and physiological processes. In general, however, this variation is accounted for via light competition. Models partition radiation above and within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018]. Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., in the Community Land Model), while models with multiple vegetative layers can analytically solve the two-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing cumulative LAI or lower light conditions [Table 2, e.g., @krinnerDynamicGlobalVegetation2005].** 
 
 
 To me, an important remark is that most gradients in DGVMs are prescribed. More data would of course help to better understand and quantify the gradients, and to compare them with model representations (part ‘Scaling in situ data with remote sensing’ of your paper). But in the end, the mechanisms explaining those gradients are still not really known, in the sense that they can’t be efficiently modeled prognostically. This is due to the multiple sources of parameters variation that you highlighted (light environment, temperature, hydraulic, …). A lot of research is done using optimality frameworks to try and predict the photosynthetic and other vegetation traits based on environmental variables. See for example (Ali et al., 2016; Buckley, 2021). A question I have, is if including more precise cohorts as you suggest, would improve the accuracy of models given all the uncertainty in the parametrization of their traits.
@@ -253,7 +253,7 @@ I was eager to see the part of the manuscript about photoprotection and also its
 
 **We separated VAZ section from VOC, and provided further context to NPQ in the following paragraph:**
 
-- **More frequent stomatal closure in upper canopy leaves (section 4) reduces their capacity to use light energy for photochemistry, thereby requiring a high capacity to dissipate excess light energy and protect against photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007]. Accumulation of excess light energy causes overreduction of the electron transport chain and the formation of harmful reactive oxygen species [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a]. A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by excess light [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015]. This form of NPQ entails interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry. Leaves in higher light environments show a greater capacity for NPQ and higher concentrations of VAZ as well as other carotenoids (e.g., beta carotene and lutein) employed as antioxidant defenses [Table `r table_leaf_traits`, @niinemetsAcclimationHighIrradiance1998; @garcia-plazaolaAcclimationAntioxidantPools2004a; @scartazzaInvestigatingEuropeanBeech2016a]. In contrast, to maximize photosynthesis and minimize damage during $T_{leaf}$ surges caused by sunflecks (section 2), shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light than sun-acclimated upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].**
+- **More frequent stomatal closure in upper canopy leaves (section 4) reduces their capacity to use light energy for photochemistry, thereby requiring a high capacity to dissipate excess light energy and protect against photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007]. Accumulation of excess light energy causes overreduction of the electron transport chain and the formation of harmful reactive oxygen species [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a]. A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by excess light [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015]. This form of NPQ entails interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry. Leaves in higher light environments show a greater capacity for NPQ and higher concentrations of VAZ as well as other carotenoids (e.g., beta carotene and lutein) employed as antioxidant defenses [Table 1, @niinemetsAcclimationHighIrradiance1998; @garcia-plazaolaAcclimationAntioxidantPools2004a; @scartazzaInvestigatingEuropeanBeech2016a]. In contrast, to maximize photosynthesis and minimize damage during $T_{leaf}$ surges caused by sunflecks (section 2), shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light than sun-acclimated upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].**
 
 **We also moved thermal sensitivity content to the traits section (now with its own sub-heading).**
 
@@ -360,7 +360,7 @@ Lines 354-372 on sun versus shade leaves and Table 1. Most of what is here was k
 
 **Thank you for the suggestion. We have added additional information highlighting older work and recent advances in the paragraph below:**
 
-**Anatomical, structural and biochemical leaf traits vary vertically across forest strata [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping vertical profiles of leaf temperature, gas exchange, and thermal sensitivity [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a; @zwienieckiHydraulicLimitationsImposed2004]. Vertical variation in leaf structure and composition has long been recognized, with sun and shade leaf traits distinguished for over a century [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928]. Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade1968], and this tendency grew given the parallel differences observed for plants grown in sun versus shade [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990]. More recent work has extended the focus from light alone to height in the vertical profile, as the latter shapes differences in leaf structure and function that can partially mitigate the effects of gravity and hydraulic pathlength on leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006]. For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022]. Thus, leaves develop differently according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of branch ontogenetic stage [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; @niinemetsVariabilityLeafMorphology2015]. Plasticity throughout the canopy may emerge when development of new leaves is influenced by information from adjacent mature leaves or apical meristems, including a “memory” of previous conditions in that location, and may also acclimate during and after expansion to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004]. Overall, leaf biochemistry, anatomy and structure may be optimized to local conditions [@lloydOptimisationPhotosyntheticCarbon2010; @buckleyOptimalCarbonPartitioning2021; @hikosakaOptimalNitrogenDistribution2014; @kitaoCanopyNitrogenDistribution2018; @niinemetsPhotosynthesisResourceDistribution2007]. However, we lack a a cohesive framework for integrating the many differences in leaf traits throughout the canopy. Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004; @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. As canopy shade is known to alter these trait relationships [@osnasDivergentDriversLeaf2018], further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.**
+**Anatomical, structural and biochemical leaf traits vary vertically across forest strata [Table 1, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping vertical profiles of leaf temperature, gas exchange, and thermal sensitivity [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a; @zwienieckiHydraulicLimitationsImposed2004]. Vertical variation in leaf structure and composition has long been recognized, with sun and shade leaf traits distinguished for over a century [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928]. Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade1968], and this tendency grew given the parallel differences observed for plants grown in sun versus shade [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990]. More recent work has extended the focus from light alone to height in the vertical profile, as the latter shapes differences in leaf structure and function that can partially mitigate the effects of gravity and hydraulic pathlength on leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006]. For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022]. Thus, leaves develop differently according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of branch ontogenetic stage [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; @niinemetsVariabilityLeafMorphology2015]. Plasticity throughout the canopy may emerge when development of new leaves is influenced by information from adjacent mature leaves or apical meristems, including a “memory” of previous conditions in that location, and may also acclimate during and after expansion to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004]. Overall, leaf biochemistry, anatomy and structure may be optimized to local conditions [@lloydOptimisationPhotosyntheticCarbon2010; @buckleyOptimalCarbonPartitioning2021; @hikosakaOptimalNitrogenDistribution2014; @kitaoCanopyNitrogenDistribution2018; @niinemetsPhotosynthesisResourceDistribution2007]. However, we lack a a cohesive framework for integrating the many differences in leaf traits throughout the canopy. Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004; @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. As canopy shade is known to alter these trait relationships [@osnasDivergentDriversLeaf2018], further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.**
 
 
 line382: 'more frequent stomatal closure higher' is awkward and does not follow the comparative. Higher than what?
