--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -14189,6 +14189,22 @@
   file = {/Users/nidhivinod/Zotero/storage/2K3C7GKL/von Arx et al. - 2012 - Spatio-temporal effects of forest canopy on unders.pdf}
 }
 
+@article{wangDiscrepancyGrowthResilience2022a,
+  title = {Discrepancy in Growth Resilience to Drought among Different Stand-Aged Forests Declines Going from a Semi-Humid Region to an Arid Region},
+  author = {Wang, Bo and Chen, Tuo and Li, Caijuan and Xu, Guobao and Wu, Guoju and Liu, Guangxiu},
+  date = {2022-05-01},
+  journaltitle = {Forest Ecology and Management},
+  volume = {511},
+  pages = {120135},
+  issn = {0378-1127},
+  doi = {10.1016/j.foreco.2022.120135},
+  url = {https://www.sciencedirect.com/science/article/pii/S0378112722001293},
+  urldate = {2022-04-04},
+  abstract = {The growth resilience of forests to extreme drought event has become an urgent topic in global change ecology because of exacerbated water constraints upon trees’ growth over the last few decades. Yet, surprisingly little is empirically known about the contribution of stand age, a key factor influencing forest structure and ecological processes, to variation in growth resilience among stands. This study revealed discrepancies in the drought resilience of forests of different stand ages by analyzing an extensive tree-ring dataset from Qinghai spruce (Picea crassifolia Kom.), a typical moisture-sensitive tree species in northwestern China. We found that older growth Qinghai spruce forest stands have higher resistance to droughts than do younger growth ones. Conversely, however, the post-drought recoveries of these older growth forest stands are lower than those of the younger growth stands. Patterns in the variation of resilience indices were consistent between two contrasting hydrological niche regions, whereas the stand age-related discrepancies in drought resilience became significantly smaller going from the wetter region to the drier region. These findings imply that, instead of a “one-size-fits-all” strategy, more meticulous and more targeted strategies are needed to enhance forest management and strengthen forest conservation given the experienced and projected climate trends, which feature increasing precipitation but higher extreme-drought frequency across this spruce tree’s habitat and distribution in northwestern China.},
+  langid = {english},
+  keywords = {Extreme drought,Forest stand age,Growth resilience,Soil moisture level,Tree rings}
+}
+
 @article{wangOptimizationTheoryExplains2021,
   title = {Optimization Theory Explains Nighttime Stomatal Responses},
   author = {Wang, Yujie and Anderegg, William R. L. and Venturas, Martin D. and Trugman, Anna T. and Yu, Kailiang and Frankenberg, Christian},
