added a sentence on shortening manuscript

--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -18,7 +18,9 @@ We are pleased to submit a revised version of our manuscript, "Thermal sensitivi
 
 - We did some modest reorganization, including moving the content on $T_{crit}$ and VOCs to the traits section (the former suggested by Reviewer 2) and reorganizing the traits section around trait groupings, as opposed to intra-specific/ interspecific. This rearrangement of the traits section better parallels Table 1 and the following section on leaf gas exchange.
 
-- We revised three figures (Figs. 1-4) based on reviewer comments, including some standardization of style, but have not perfected the styling because the journal illustrators will fix up all figures. 
+- We shortened the manuscript, with a current word count of 9814.
+
+- We revised three figures (Figs. 1-4) based on reviewer comments, including some standardization of style, but have not perfected the styling because the journal illustrators will fix up all figures.
 
 Regarding production of the figures, below are some specific criteria:
 <!--To ensure rapid handling of your manuscript we would be grateful if you could confirm, in the cover letter to the Editor, whether or not there are any important elements of the figures that need to be retained (eg. colours used, plant species drawn, layout and spacing, symbols, etc) and if you have specific instructions that you would like the illustrator to take on board.-->
@@ -239,17 +241,17 @@ Given the depth of what is known about within-canopy micrometeorology, I would h
 Certainly, a discussion with a micrometeorologist or atmospheric scientist, if not already had, could improve the manuscript. Statements like l. 156: 'Wind speeds are also higher at the top of the canopy, owing to the buffering effect of the canopy' are an awkward read. Buffering? There could be much improvement by looking at it the other way: wind will blow as it does at the top of the canopy until encountering the plant canopy top as an aerodynamic drag element; then the additional leaf area entrains air movement and sweep-eject motion and eddies are attenuated through the canopy resulting in progressively lower windspeeds deeper into canopies. I don’t know how buffering enters into this, or what the authors mean here.
 
 
-**We appreciate these comments and have added a discussion of canopy transport from a more theoretical perspective (lines 169-192), immediately after the paragraph about canopy radiation profiles and before those on CO~2~, H~2~O and temperature profiles. We have also modified the subsequent paragraph about wind speeds to eliminate the use of the confusing term “buffering”.**
+**We appreciate these comments and have added a discussion of canopy transport from a more theoretical perspective (lines 157-184), immediately after the paragraph about canopy radiation profiles and before those on CO~2~, H~2~O and temperature profiles. We have also modified the subsequent paragraph about wind speeds to eliminate the use of the confusing term “buffering”.**
 
 **We had also used the words “buffering”, "buffer", or "buffered" in a different context, where the intention was to describe how canopy attenuation (of radiation and wind) can reduce daily extremes of temperature in the lower canopy and understory. We have modified the text in those places to clarify, generally reducing use of the terms. However, the term has been widely used in recent publications on this theme, and we therefore did not feel it was necessary to eliminate it's usage. Examples of modified sentences include the following:** 
 
-- **“Canopy foliage is the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions ***from large fluctuations in conditions experienced above the canopy.”; (line xxx)***(new text italicized)**
-- **“Commonly, attenuation of radiation and vertical transport of sensible heat by the canopy buffers the lower canopy and understory from large diel and seasonal swings in air temperature [@defrenneForestMicroclimatesClimate2021; @haesenForestTempSubcanopyMicroclimate2021a; @zellweger_seasonal_2019]" (line 229)**
-- **“Typically, ***diel temperature range is smaller beneath dense canopies than above, resulting from,***~~lower maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than beneath open canopies or in nearby clearings.” (line 232)**
+- **“Canopy foliage is the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions ***from large fluctuations in conditions experienced above the canopy.”; (line 120)***(new text italicized)**
+- **“Commonly, attenuation of radiation and vertical transport of sensible heat by the canopy buffers the lower canopy and understory from large diel and seasonal swings in air temperature [@defrenneForestMicroclimatesClimate2021; @haesenForestTempSubcanopyMicroclimate2021a; @zellweger_seasonal_2019]" (line 210)**
+- **“Diel temperature range is typically smaller beneath dense canopies than above, resulting from,lower maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than beneath open canopies or in nearby clearings.” (line 232)**
 
 I was eager to see the part of the manuscript about photoprotection and also its relationship to heat damage. The opening sentence (l. 384) was obvious to the point of being painful to read.  Of course photoprotection is higher in the upper canopy: radiation levels are higher! Can this first sentence get revised to increase information content? This is one of the more exciting topics of the review, yet is handled only in a cursory fashion. If the authors could manage a bit more discussion of this topic it would be useful – instead they move (in the same paragraph) to VOC emissions, something I view as a separate capability of some plants. This is also confused in Fig. 1 where VAZ and VOC are placed on the same line. I’d like to see a more complete discussion of photoprotection and heat dissipation by NPQ first, and a separate paragraph about VOC. Also, there is nothing about critical temperature until late in the manuscript even though the authors skirt the issue in their text about photoprotection. This kind of thermal sensitivity is different from gas exchange (the section where the text about Tcrit occurs, l. 530-555), and should have been discussed earlier in the manuscript.
 
-**We have revised the first sentence here to read: "Biochemical protection against light and heat damage increases with peak radiation loads, and thus tends to be higher in the upper canopy than in the understory (Table 1)." We note that it is not necessarily obvious that mid- or lower-canopy leaves should have less photoprotection, given that they may experience nearly the same peak radiation loads, during sunflecks, as leaves in the upper canopy, despite generally having less capacity to dissipate light by photochemistry. We also choose to keep this rather obvious sentence because we feel that basic topic sentences are important for helping to guide readers from a diversity of sub-disciplines through the manuscript.** 
+**We have revised the first sentence here to read: "Biochemical protection against light and heat damage increases with peak radiation loads and thus tends to be higher in the upper canopy, which is subject to higher $T_{leaf}$ and hydraulic limitations, than in the understory (Table 1)." We note that it is not necessarily obvious that mid- or lower-canopy leaves should have less photoprotection, given that they may experience nearly the same peak radiation loads, during sunflecks, as leaves in the upper canopy, despite generally having less capacity to dissipate light by photochemistry. We also choose to keep this rather obvious sentence because we feel that basic topic sentences are important for helping to guide readers from a diversity of sub-disciplines through the manuscript.** 
 
 **We separated VAZ section from VOC, and provided further context to NPQ in the following paragraph:**
 
