--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -130,7 +130,7 @@ Using published research and new analyses, we evaluate how microclimate and leaf
 In closed-canopy forests, upper-canopy leaves are exposed to the highest solar radiation and evaporative demand, which can elevate leaf temperature ($T_{leaf}$), particularly when transpirational cooling is curtailed by limited stomatal conductance.
 However, foliar traits also vary across height or light gradients, partially mitigating and protecting against the elevation of upper-canopy $T_{leaf}$.
 Leaf metabolism generally increases with height across the vertical gradient, yet differences in thermal sensitivity across the gradient appear modest.
-Scaling from leaves to trees, tall trees have higher absolute metabolic capacity and growth at both individual and ecosystem levels, yet are disproportionately vulnerable to drought and damaging $T_{leaf}$, particularly under climate change. 
+Scaling from leaves to trees, tall trees have higher absolute metabolic capacity and growth, yet are disproportionately vulnerable to drought and damaging $T_{leaf}$, particularly under climate change. 
 In contrast, understory trees experience fewer extreme high $T_{leaf}$'s but have fewer cooling mechanisms and thus may be disproportionately impacted under hot, humid conditions, or when exposed to harsher conditions through canopy disturbance.
 As the climate changes, integrating the patterns and mechanisms reviewed here into models will be critical to forecasting forest-climate feedbacks.
 
@@ -485,10 +485,10 @@ The relative importance of exposure versus height in shaping drought sensitivity
 Although drought sensitivity clearly increases with crown height and hence with DBH, it remains unclear how growth sensitivity to high $T_{air}$, independent of drought, varies along the vertical gradient.
 High $T_{air}$ is often associated with high VPD and atmospheric drought, likely explaining negative growth responses to $T_{air}$ -- particularly among larger trees -- even if soil moisture remains high [@novickIncreasingImportanceAtmospheric2016], or when precipitation is statistically accounted for [Fig. `r fig_treerings`, @anderson-teixeiraJointEffectsClimate2022].
 However, under well-watered conditions conducive to high $g_s$, we do not necessarily expect higher thermal sensitivity of photosynthesis (section 4.2) or woody growth in upper-canopy trees than their understory counterparts. 
-In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
+Indeed, there are cases where tree-ring records show more negative or less positive $T_{air}$-responses of understory trees compared to canopy dominants [@anderson-teixeiraJointEffectsClimate2022; @rollinsonClimateSensitivityUnderstory2020].
 Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
 
-![**Figure `r fig_treerings`. Examples of tree-ring analyses showing differential interannual temperature sensitivity of annual growth between large canopy versus smaller understory trees.** In column (a), across three sites and species, trees with large diameter at breast height (DBH) had more negative growth responses to high temperatures than did small trees of the same species. Lines represent responses of trees at the maximum and minimum tails of the DBH distribution included in the analysis to the most influential temperature-related variable at the site. These variables are maximum temperature ($T_{max}$) or potential evapotranspiration (PET) over a seasonal window spanning from the noted beginning to end month, where "c" and "p" represent months in the current and previous calendar year, respectively. Colored lines represent responses to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. From @anderson-teixeiraJointEffectsClimate2022. In column (b), understory trees of four species had more negative growth responses to high growing season temperatures across eight New England forests. Growth is expressed as relativized basal area increment (BAI), where values > and < 100% indicate higher- or lower- than-average growth, respectively. Again, colored lines indicate modeled mean temperature responses and transparent ribbons indicate 95% confidence intervals. From @rollinsonClimateSensitivityUnderstory2020.](tree_rings/Figure_4_tree_rings.png)
+![**Figure `r fig_treerings`. Examples of tree-ring evidence for greater interannual temperature sensitivity of annual growth for large than for small trees.** Across three sites and species, trees with large diameter at breast height (DBH) had more negative growth responses to high maximum temperature ($T_{max}$) or potential evapotranspiration (PET) than did small trees of the same species. Independent variables are the most influential temperature-related variable at the site ($T_{max}$ or PET over a seasonal window spanning from the noted beginning to end month, where "c" and "p" represent months in the current and previous calendar year, respectively). Colored lines represent responses  of trees at the maximum and minimum tails of the DBH distribution included in the analysis to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. From @anderson-teixeiraJointEffectsClimate2022.](tree_rings/pre_temp_groups_dbh_interactions_for_NIDHI.png)
 
 
 ### 5.2. C and water flux
@@ -507,7 +507,7 @@ Because canopy trees dominate these fluxes (Fig. `r fig_ecosystem`), their respo
 Thus, for example, increases in canopy temperature reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. 
 Yet evidence also suggests GPP and ecosystem respiration are less sensitive to heat and drought stress in older forests than in young forests [@xuSeasonalVariabilityForest2020], perhaps in part because of more complex vertical structuring [@jonesManagingRedPine2019;@nunesForestFragmentationImpacts2022].
 A rare example of a study comparing climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an *El Niño* drought in Panama, while the smallest trees had higher productivity during the drought, likely because of increased light in the understory. 
-It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. `r fig_leaf_T`) and tree ring evidence (Fig. `r fig_treerings`) suggest that understory trees may respond more negatively to hot, wet conditions. 
+It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. `r fig_leaf_T`) and some tree ring evidence [@anderson-teixeiraJointEffectsClimate2022; @rollinsonClimateSensitivityUnderstory2020] raise the possibility that understory trees may be at a relative disadvantage under hot, humid conditions. 
 Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
 
 # III.  Implications
@@ -536,7 +536,7 @@ In contrast, understory leaves and trees are unlikely to face the same absolute 
 Protection from thermal stress associated with high direct radiation might allow shaded layers to photosynthesize longer in the day [@millerOnlySunlitLeaves2021; @heChangesShadowShifting2018a].
 However, with $T_{air}$ more frequently equaling or exceeding photosynthetic optima, occasional exposure to sunflecks coupled with lower capacity to dissipate excess heat may prove disadvantageous. 
 <!--Moreover, increased nighttime $T_{air}$ may disproportionately increase respiration relative to photosynthesis, thereby negatively affecting the carbon balance.-->
-While it is currently difficult to predict whether canopy or understory photosynthesis will be more severely affected by warming (section 4.2), limited tree-ring evidence indicates that unusually hot growing seasons can reduce growth more for understory trees [Fig `r fig_treerings`b, @rollinsonClimateSensitivityUnderstory2020].
+While it is currently difficult to predict whether canopy or understory photosynthesis will be more severely affected by warming (section 4.2), limited tree-ring evidence indicates that unusually hot growing seasons can reduce growth more for understory trees [@rollinsonClimateSensitivityUnderstory2020].
 Thus, while canopy trees are probably more vulnerable to mortality from distinct heat-related disturbances, such as drought or heat waves, trees in the understory might be more negatively affected by chronic stress from warming $T_{air}$, which may reduce growth and increase the risk of carbon starvation in these small trees, whose lower NSC reserves make them more vulnerable [@niinemetsResponsesForestTrees2010].
 
 ### Canopy disturbance
@@ -611,7 +611,7 @@ The growing availability of such data makes this an opportune time to link *in s
 Across vertical gradients, directional trends in the biophysical environment and leaf traits are the rule, driving variation in the physiology and ecology that have these as their underpinnings (Fig. `r fig_schematic`).
 However, uncertainty remains about how temperature sensitivity of foliar gas exchange varies across these vertical gradients.
 Similarly, much remains unknown about how crown exposure influences the temperature sensitivity of woody stem growth. 
-While most available data suggest that large canopy trees are the most vulnerable to warming when water is limited, far less is known about the responses of understory trees, which might be more vulnerable to chronic warming stress under relatively mesic conditions (Fig. `r fig_treerings`). 
+While most available data suggest that large canopy trees are the most vulnerable to warming when water is limited, far less is known about the responses of understory trees, which might be more vulnerable to chronic warming stress under relatively mesic conditions [@rollinsonClimateSensitivityUnderstory2020]. 
 
 As climate changes, patterns and processes across vertical gradients will likely to shift as well.
 In the historical climates to which trees adapted, the canopy was an advantageous place for photosynthesis and growth. 
