--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -87,6 +87,8 @@ So perhaps the authors can greatly soften their ecosystem level assessment. To t
 
 l.32 tall trees have higher absolute metabolic capacity and growth at both individual *and ecosystem levels* (please remove the text between the asterices).
 
+**Done.**
+
 I make a major point of revisions around this idea (l. 35-36) that 'understory trees may be disproportionately impacted under hot, humid conditions'. What evidence is there? There is speculation about what might happen in sunflecks (l. 800-801) but little direct evidence, and there is Fig. 4b which is one study with smoothed results that are not convincing (see above). Yet this statement is contrary to statements made in the actual review, like l. 200-201 to the effect that upper canopy is warming with higher VPD than understory, l. 232 that there are higher leaf-air temperature difference in the upper canopy than understory, l. 275-276 that leaves in the upper canopy have higher leaf-air temperature difference and maximum temperatures than understory, also l. 775-776. If so many arguments have been made for a harsher environment and higher leaf temperatures in the upper canopy than understory, it comes off as illogical to reverse and conclude on the basis of Fig. 4b which is flimsy evidence that, as stated in the abstract l. 35-36: 'understory trees may be disproportionately impacted under hot, humid conditions'. I would suggest that the authors clean up their contentions and not come off so contrary to their own evidence and logic. Certainly this titillating idea of understory tree damage is not to be highlighted in the abstract if so much evidence to the contrary is presented in the review. I would like to see direct observations of the impacts that they suggest for the understory, but in the absence of strong arguments the balance of the review would support upper canopy vulnerability rather than the understory. This is a major aspect for the authors to clarify.
 
 These are wording issues where the writing can improve:
